# django-unstuck

./: .gitignore  LICENSE  README.md  pyproject.toml
apps/unstuck/: apps.py  urls.py
apps/unstuck/templates/unstuck/: main.html
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  test.py
demoproject/: requirements.txt
demoproject/demoapi/: apps.py  models.py  serializers.py  views.py
demoproject/demoapi/migrations/: 0001_initial.py
demoproject/demoproject/: asgi.py  settings.py  urls.py  wsgi.py
docs/: app-management.md  background-tasks.md  caching.md  files.md  flatpages.md  i18n.md  images.md  middleware.md  registration.md  secure-access.md  settings.md  templates.md  username.md  where-does-the-code-go.md
templates/: base.html
