[tool.poetry]
name = "django-unstuck"
version = "0.0.0"
description = ""
authors = ["Johannes Spielmann <j@spielmannsolutions.com>"]
license = "BSD 3-Clause License"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
